# cpp-lab-3

./: .clang-format  .gitignore  CMakeLists.txt  GeometryLabsTemplate.sln  GeometryLabsTemplate.vcxproj  Setup.bat  vcpkg.json
Source/: CMakeLists.txt  Gsprite.cpp  RClass.cpp  RClass.h  gSprite.h  main.cpp
